--- a/03-ignews/package.json
+++ b/03-ignews/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prismicio/client": "^5.1.0",
     "@stripe/stripe-js": "^1.21.1",
     "@types/next-auth": "^3.15.0",
     "axios": "^0.24.0",
     "faunadb": "^4.4.1",
     "next": "12.0.4",
     "next-auth": "^3.29.0",
+    "prismic-dom": "^2.2.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
     "eslint": "7",
