--- a/04-dashgo/package.json
+++ b/04-dashgo/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.5",
+    "@types/axios": "^0.14.0",
     "apexcharts": "^3.32.0",
+    "axios": "^0.24.0",
     "framer-motion": "^5.5.3",
     "next": "12.0.7",
     "react": "17.0.2",
