--- a/02-dtmoney/package.json
+++ b/02-dtmoney/package.json
@@ -9,16 +9,15 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@types/react-modal": "^3.13.1",
     "axios": "^0.24.0",
     "miragejs": "^0.1.42",
     "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "2.1.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -28,6 +27,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.15",
     "typescript": "^4.1.2"
   },
