--- a/03-ignews/package.json
+++ b/03-ignews/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@prismicio/client": "^5.1.0",
     "@stripe/stripe-js": "^1.21.1",
-    "@types/next-auth": "^3.15.0",
     "axios": "^0.24.0",
     "faunadb": "^4.4.1",
     "next": "12.0.9",
@@ -25,12 +24,20 @@
     "stripe": "^8.189.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.11.3",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.4.0",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^16.11.7",
     "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
+    "babel-jest": "^27.5.1",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
+    "jest": "^27.5.1",
+    "jest-dom": "^4.0.0",
     "typescript": "^4.4.4"
   }
 }
