--- a/03-ignews/package.json
+++ b/03-ignews/package.json
@@ -36,8 +36,10 @@
     "babel-jest": "^27.5.1",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "jest-dom": "^4.0.0",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.4.4"
   }
 }
