--- a/09-bonusredux/package.json
+++ b/09-bonusredux/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.26.0",
+    "immer": "^9.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -16,6 +17,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.22",
     "json-server": "^0.17.0",
+    "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.5.5"
   },
   "scripts": {
