--- a/09-bonusredux/package.json
+++ b/09-bonusredux/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@types/node": "^17.0.18",
