--- a/bonus/redux/package.json
+++ b/bonus/redux/package.json
@@ -19,7 +19,7 @@
     "@types/react-redux": "^7.1.22",
     "json-server": "^0.17.0",
     "redux-devtools-extension": "^2.13.9",
-    "typescript": "^4.5.5"
+    "typescript": "4.1"
   },
   "scripts": {
     "start": "react-scripts start",
