--- a/p02-dtmoney/server/package.json
+++ b/p02-dtmoney/server/package.json
@@ -10,7 +10,9 @@
     "@prisma/client": "^4.16.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
