--- a/p02-dtmoney/server/tsconfig.json
+++ b/p02-dtmoney/server/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
     "target": "es2016",
+    "outDir": "./dist",
+    "rootDir": "./",
+    "strict": true,
     "baseUrl": ".",
     "module": "commonjs",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
     "skipLibCheck": true
   },
   "ts-node": {
@@ -13,4 +15,10 @@
       "module": "CommonJS"
     }
   },
+  "include" : [
+    "./**/*.ts"
+  ],
+  "exclude" : [
+    "./node_modules"
+  ]
 }
