--- a/p02-dtmoney/server/package.json
+++ b/p02-dtmoney/server/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/src/server.js",
     "build": "tsc --project tsconfig.json",
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "postbuild": "yarn migrate:dev && yarn seed",
     "migrate:dev": "prisma migrate dev",
     "migrate:deploy": "prisma migrate deploy",
     "seed": "prisma db seed"
