--- a/p04-dashgo/server/package.json
+++ b/p04-dashgo/server/package.json
@@ -10,7 +10,8 @@
     "@fastify/cors": "^8.3.0",
     "@prisma/client": "^4.16.2",
     "dotenv": "^16.3.1",
-    "fastify": "^4.19.2"
+    "fastify": "^4.19.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "^20.4.1",
