P4 #12 - Preparação do Prisma para ambiente de produção

--- a/p04-dashgo/server/tsconfig.json
+++ b/p04-dashgo/server/tsconfig.json
@@ -10,4 +10,9 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
+  "ts-node": {
+    "compilerOptions": {
+      "module": "CommonJS"
+    }
+  }
 }
