--- a/p04-dashgo/server/package.json
+++ b/p04-dashgo/server/package.json
@@ -4,18 +4,28 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "migrate:reset": "prisma migrate reset",
+    "migrate:dev": "prisma migrate dev",
+    "migrate:deploy": "prisma migrate deploy",
+    "seed": "prisma db seed"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@fastify/cors": "^8.3.0",
     "@prisma/client": "^4.16.2",
     "dotenv": "^16.3.1",
+    "faker": "^5.5.3",
     "fastify": "^4.19.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.9",
     "@types/node": "^20.4.1",
     "prisma": "^4.16.2",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.9.5"
   }
