--- a/p04-dashgo/server/tsconfig.json
+++ b/p04-dashgo/server/tsconfig.json
@@ -14,5 +14,11 @@
     "compilerOptions": {
       "module": "CommonJS"
     }
-  }
+  },
+  "include" : [
+    "./**/*.ts"
+  ],
+  "exclude" : [
+    "./node_modules"
+  ]
 }
